crates/aranya-policy-compiler/tests/data/facts/update_invalid_to_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
1 | fact Foo[i int] => {a string}
  |                     - expected because of this
...
8 |             update Foo[i: 1]=>{a: 1} to {a: 0}
  |                                   ^ expected `string` but found `int`
